--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,44 @@ h2 {
     margin-bottom: 2%;
     margin-left: 5%;
 }
+/* navbar stylings */
+.sidenav {
+    height: 100%;
+    width: 150px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+  
+  .sidenav a {
+    padding: 6px 6px 6px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .main {
+    margin-left: 150px; /* Same as the width of the sidenav */
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+
+  /* jumbotron styling */
+  .jumbotron {
+    padding: 2rem;
+    margin-bottom: 2rem;
+    background-color: #1d3557;
+    border-radius: .3rem;  
+  }
