dog profile and parent profile form updates

--- a/views/dogProfile.handlebars
+++ b/views/dogProfile.handlebars
@@ -44,19 +44,27 @@
             <small id="sliderRange" class="form-text text-muted">1 2 3 4 5</small>
         </div>
         </div>
-        <div class="form-group">
-            <label for="exampleFormControlSelect2">Activities</label>
-            <select multiple class="form-control" id="exampleFormControlSelect2">
-                <option>Hiking</option>
-                <option>Leisurely Walks</option>
-                <option>Frisbee</option>
-                <option>Squeaky Toys</option>
-                <option>Small-dog friendly</option>
-                <option>Big-dog friendly</option>
-                <option>Child friendly</option>
-                <option>Cat friendly</option>
-            </select>
+       <div class="form-group">
+            <label><h5>Activities:</h5></label>
+            <input class="form-input" type="checkbox" id="hiking" value="hike">
+            <label for="male">Hiking</label>
+            <input class="form-input" type="checkbox" id="walk" value="walk">
+            <label for="walk">Leisurely Walks</label>
+            <input class="form-input" type="checkbox" id="frisbee" value="frisbee">
+            <label for="walk">Frisbee</label>
+            <input class="form-input" type="checkbox" id="toy" value="toy">
+            <label for="walk">Squeaky Toys</label>
+            <input class="form-input" type="checkbox" id="fetch" value="fetch">
+            <label for="walk">Fetch</label>
+            <input class="form-input" type="checkbox" id="small" value="smalldogfriendly">
+            <label for="walk">Small-dog friendly</label>
+            <input class="form-input" type="checkbox" id="fetch" value="bigdog">
+            <label for="walk">Big-dog friendly</label>
+            <input class="form-input" type="checkbox" id="fetch" value="bigdog">
+            <label for="walk">Child friendly</label>
+               
         </div>
+
 
 
 
