--- a/views/parentProfile.handlebars
+++ b/views/parentProfile.handlebars
@@ -39,7 +39,7 @@
         </div>
         <!-- Slider resource https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
         <div class="slidecontainer form-group">
-            <label>Distance Willing to Travel :</label>
+            <label>Max Distance Willing to Travel:</label>
             <input type="range" min="1" max="5" value="3" class="slider" id="energyLevel">
             <small id="sliderRange" class="form-text text-muted">10 20 30 40 50+</small>
         </div>
