--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,19 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Park Pack</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="/public/css/jass.css"> -->
-    <link rel="stylesheet" href="../public/css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Park Pack</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
-        <!-- Side navigation bar; add slide-in/out onclick feature -->
+    <!-- Side navigation bar; add slide-in/out onclick feature -->
     <div class="sidenav">
       <a href="#">About</a>
       <a href="#">Services</a>
@@ -22,8 +21,8 @@
       <a href="#">Contact</a>
     </div>
     <header class="jumbotron">
-        <h1>Park Pack</h1>
-        <!-- add icon here -->
+      <h1>Park Pack</h1>
+      <!-- add icon here -->
     </header>
     {{#if logged_in}}
     <nav>
@@ -35,7 +34,7 @@
     {{{ body }}}
   </main>
   <footer>
-      
+
   </footer>
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
