--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,17 @@
+/* color palate for site:
+"Ming":"#16697a" dark tealish--use for either navbar or jumbotron
+"Pacific Blue":"#489fb5" medium blue --use for either navbar or jumbotron
+"Middle Blue":"#82c0cc" light blue--use as accent color?
+"Isabelline":"#ede7e3" Off-white--use for background, and text color against Ming (teal)
+"Orange Peel":"#ffa62b" -- Orange: use for puppy icon and button colors/CTA items, possible on-hove class */
+
+/* Google Fonts for site:
+App name:
+Headers & body text: font-family: 'Lexend', sans-serif;
+
+*/
+
+
 h2 {
     color:rebeccapurple;
 }
