--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,11 @@
   <title>Park Pack</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Lexend&family=Mali:wght@200&family=Neucha&family=Original+Surfer&family=Potta+One&family=Train+One&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
