--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,26 +9,31 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
+  <script src="https://kit.fontawesome.com/ae53138fc4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <!-- Side navigation bar; add slide-in/out onclick feature -->
-    <div class="sidenav">
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
+  <!-- start offcanvas navbar-->
+  <button class="btn btn-navmenu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
+    aria-controls="offcanvasScrolling"><i class="fas fa-bone fa-spin"></i> </button>
+  <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
+    id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+    <div class="offcanvas-header">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a href="#" class="nav-link">icon</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">icon</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">icon</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">icon</a></li>
+        {{#if logged_in}}
+        <li class="nav-item" id="logout"><a href="#" class="nav-link">Logout</a></li>
+        {{/if}}
+      </ul>
+      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
-    <header class="jumbotron">
-      <h1>Park Pack</h1>
-      <!-- add icon here -->
-    </header>
-    {{#if logged_in}}
-    <nav>
-      <button class="btn" id="logout">logout</button>
-    </nav>
-    {{/if}}
+  </div>
+  {{!-- end of offcanvas navbar --}}
+
+  <header class="display-flex justify-space-between align-center p-2">
   </header>
   <main class="container container-fluid mt-5">
     {{{ body }}}
@@ -39,6 +44,11 @@
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
+
+  {{!-- bootstrap js plugin --}}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
