--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,28 +18,35 @@
 </head>
 
 <body>
-  <!-- start offcanvas navbar-->
-  <button class="btn btn-navmenu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
-    aria-controls="offcanvasScrolling"><i class="fas fa-bone fa-spin"></i> </button>
-  <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
-    id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
-    <div class="offcanvas-header">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a href="#" class="nav-link">icon</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">icon</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">icon</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">icon</a></li>
-        {{#if logged_in}}
-        <li class="nav-item" id="logout"><a href="#" class="nav-link">Logout</a></li>
-        {{/if}}
-      </ul>
-      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-  </div>
-  {{!-- end of offcanvas navbar --}}
+  <header>
+    <!-- start offcanvas navbar-->
+    <div class="jumbotron">
+      <button class="btn btn-navmenu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
+        aria-controls="offcanvasScrolling"><i class="fas fa-bone fa-spin"></i> </button>
+      <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
+        id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+        <div class="offcanvas-header">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Login/Sign-up</a></li>
+            {{#if logged_in}}
+            <li class="nav-item"><a href="#" class="nav-link">Matches</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Profile</a></li>
+            <li class="nav-item" id="logout"><a href="#" class="nav-link">Logout</a></li>
+            {{/if}}
+          </ul>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+      </div>
+      {{!-- end of offcanvas navbar --}}
+      <div class="position-relative">
+        <h1 class="logo position-absolute top-50 start-50 translate-middle">Park Pack<span><img
+              src="./images/icons/noun_Dog_1539664_sm.png" alt="dog face icon"></span></h1>
 
-  <header class="display-flex justify-space-between align-center p-2">
+      </div>
+    </div>
   </header>
+
   <main class="container container-fluid mt-5">
     {{{ body }}}
   </main>
