--- a/views/profiles.handlebars
+++ b/views/profiles.handlebars
@@ -42,7 +42,7 @@
             <label>Max Distance Willing to Travel:</label>
             <input type="range" min="1" max="5" value="3" class="slider" id="energyLevel">
             </br>
-            <small id="sliderRange" class="form-text text-muted">10 20 30 40 50+</small>
+            <small id="distanceRange" class="form-text text-muted">10 20 30 40 50+</small>
         </div>
         </div>
         <div class="form-group">
