dogroute user route updates

--- a/views/Userprofile.handlebars
+++ b/views/Userprofile.handlebars
@@ -57,7 +57,7 @@
             <label>Confirm Password:</label>
             <input class="form-input" type="password" id="confirmpassword" />
         </div> -->
-<button class="btn btn-warning">Create My Profile!</button>
+<button class="btn btn-warning" id = "userSubmit">Create My Profile!</button>
         </div>
 
     
