more dogprofile/userprofile routes

--- a/views/dogProfile.handlebars
+++ b/views/dogProfile.handlebars
@@ -8,9 +8,9 @@
         </div>
         <div class="form-group">
             <label>Gender:</label>
-            <input class="form-input" type="checkbox" id="male" value="m">
+            <input class="form-input" type="checkbox" name = "dogGender" value="m">
             <label for="male">Male</label>
-            <input class="form-input" type="checkbox" id="female" value="f">
+            <input class="form-input" type="checkbox" name = "dogGender" value="f">
             <label for="female">Female</label>
         </div>
         <div class="form-group">
@@ -27,9 +27,9 @@
         </div>
         <div class="form-group">
             <label>Spayed/Neutered:</label>
-            <input class="form-input" type="checkbox" id="Yes" value="yes">
+            <input class="form-input" type="checkbox" name="fixed" value="yes">
             <label for="yes">Yes</label>
-            <input class="form-input" type="checkbox" id="no" value="no">
+            <input class="form-input" type="checkbox" name ="fixed value="no">
             <label for="no">No</label>
         </div>
         {{!-- <div class="form-group">
