fixed links in views and icon

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
     <div class="d-grid gap-2 mb-2 form-group">
         <button type="submit" class="btn btn-secondary">Login!</button>
     </div>
-    <a id="sign-up-link" href="/profiles" onclick="changeView()">Sign up instead</a>
+    <a id="sign-up-link" href="/Userprofile" onclick="changeView()">Sign up instead</a>
 </form>
 
 
