--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
         <div class="offcanvas-header">
           <ul class="navbar-nav">
             <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="../login.handlebars" class="nav-link">Login/Sign-up</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link">Login/Sign-up</a></li>
             {{#if logged_in}}
             <li class="nav-item"><a href="#" class="nav-link">My Pack</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Profile</a></li>
