--- a/views/dogProfile.handlebars
+++ b/views/dogProfile.handlebars
@@ -29,8 +29,8 @@
             <label>Spayed/Neutered:</label>
             <input class="form-input" type="checkbox" name="fixed" value="yes">
             <label for="yes">Yes</label>
-            <input class="form-input" type="checkbox" name ="fixed value="no">
-            <label for="no">No</label>
+            <input class="form-input" type="checkbox" name ="fixed" value="no">
+            <label for="no"> No </label>
         </div>
         {{!-- <div class="form-group">
             <label for="exampleFormControlSelect1">Energy Level</label>
@@ -75,4 +75,5 @@
 
 
 
-{{!-- <script src="/js/profile.js"></script> --}}
+<script src="/public/js/dogSignup.js"></script>
+
