--- a/views/Userprofile.handlebars
+++ b/views/Userprofile.handlebars
@@ -47,7 +47,7 @@
     </div>
     <div class="form-group">
         <label>User Name:</label>
-        <input class="form-input" type="text" id="lastName" placeholder="default email from ^^" />
+        <input class="form-input" type="text" id="userName" placeholder="default email from ^^" />
     </div>
     <div class="form-group">
         <label>Password:</label>
@@ -67,4 +67,4 @@
 
 
    
-    <script src="/public/js/userSignup.js"></script> 
+    <script src="./js/usersignup.js"></script> 
