adding chat and chatrooms handlebars

--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -1,1 +1,25 @@
-<h1>Hello Friends!</h1>
+<div class="join-container">
+    <header class="join-header">
+        <h1><i class="fas fa-dog"></i> ParkPack Chat</h1>
+    </header>
+    <main class="join-main">
+        <form action="chat.html">
+            <div class="form-control">
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" placeholder="Enter username..." required />
+            </div>
+            <div class="form-control">
+                <label for="room">Room</label>
+                <select name="room" id="room">
+                    <option value="Big Doggos">Big Doggos</option>
+                    <option value="Small Doggos">Small Doggos</option>
+                    <option value="Size Don't matter">Size Don't matter</option>
+                    <!-- <option value="DogParks">Doggo Parks</option>
+							<option value="scenicWalks">Scenic Walks</option>
+							<option value="hikingTrails">Hiking, yo!</option> -->
+                </select>
+            </div>
+            <button type="submit" class="btn">Join Chat</button>
+        </form>
+    </main>
+</div>
