class and id update

--- a/views/Userprofile.handlebars
+++ b/views/Userprofile.handlebars
@@ -1,6 +1,6 @@
 <h2>Create Parent Profile</h2>
 
-<form class=" form dogProfileForm">
+<form class=" form userProfileForm">
     <div class="form-group">
         <label>First Name:</label>
         <input class="form-input" type="text" id="firstName" />
