--- a/views/Userprofile.handlebars
+++ b/views/Userprofile.handlebars
@@ -1,6 +1,6 @@
 <h2>Create Parent Profile</h2>
 
-<form class=" form dogProfileForm">
+<form class=" form userProfileForm">
     <div class="form-group">
         <label>First Name:</label>
         <input class="form-input" type="text" id="firstName" />
@@ -47,7 +47,7 @@
     </div>
     <div class="form-group">
         <label>User Name:</label>
-        <input class="form-input" type="text" id="lastName" placeholder="default email from ^^" />
+        <input class="form-input" type="text" id="userName" placeholder="default email from ^^" />
     </div>
     <div class="form-group">
         <label>Password:</label>
@@ -67,4 +67,4 @@
 
 
    
-    <script src="/public/js/userSignup.js"></script> 
+<script src="./js/userSignup.js"></script>
