--- a/views/chatroom.handlebars
+++ b/views/chatroom.handlebars
@@ -1,12 +1,12 @@
     <div class="chat-container">
       <header class="chat-header">
-        <h1><i class="fas fa-dog"></i> Woofs Happening</h1>
+        <h1><i class="fas fa-dog"></i> Woof's Happening</h1>
         <a id="leave-btn" class="btn">Leave Room</a>
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
-          <h3><i class="fas fa-comments"></i> Room Name:</h3>
-          <h2 id="room-name"></h2>
+          <h3><i class="fas fa-comments"></i> Room Name: </h3>
+          <h2 id="room-name">{{ name }}</h2>
           <h3><i class="fas fa-paw"></i> Users</h3>
           <ul id="users"></ul>
         </div>
@@ -25,3 +25,7 @@
         </form>
       </div>
     </div>
+
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script src="/js/chatroom.js"></script>
+     {{!-- <script type="text/javascript" src="http://localhost:3001/socket.io/socket.io.js"></script> --}}
