--- a/views/Userprofile.handlebars
+++ b/views/Userprofile.handlebars
@@ -3,15 +3,15 @@
 <form class=" form userProfileForm">
     <div class="form-group">
         <label>First Name:</label>
-        <input class="form-input" type="text" id="firstName" />
+        <input class="form-control" type="text" id="firstName" />
     </div>
     <div class="form-group">
         <label>Last Name:</label>
-        <input class="form-input" type="text" id="lastName" />
+        <input class="form-control" type="text" id="lastName" />
     </div>
     <div class="form-group">
         <label>Email:</label>
-        <input class="form-input" type="email" id="email" />
+        <input class="form-control" type="email" id="email" />
     </div>
     <div class="form-group">
         <label>Gender Identity:</label>
@@ -35,7 +35,7 @@
     </div>
     <div class="form-group">
         <label>Zip Code:</label>
-        <input class="form-input" type="number" id="zip" />
+        <input class="form-control" type="number" id="zip" />
     </div>
     <!-- Slider resource https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
     <div class="slidecontainer form-group">
@@ -47,17 +47,18 @@
     </div>
     <div class="form-group">
         <label>User Name:</label>
-        <input class="form-input" type="text" id="userName" placeholder="default email from ^^" />
+        <input class="form-control" type="text" id="userName" placeholder="default email from ^^" />
     </div>
     <div class="form-group">
         <label>Password:</label>
-        <input class="form-input" type="password" id="password" />
+        <input class="form-control" type="password" id="password" />
     </div>
     <!-- <div class="form-group">
             <label>Confirm Password:</label>
-            <input class="form-input" type="password" id="confirmpassword" />
+            <input class="form-control" type="password" id="confirmpassword" />
         </div> -->
-    <button class="btn btn-warning" id="userSubmit">Create My Profile!</button>
+    <div class="form-group">
+    <button class="btn btn-action" id="userSubmit">Create My Profile!</button>
     </div>
 
 
