--- a/views/dogProfile.handlebars
+++ b/views/dogProfile.handlebars
@@ -3,7 +3,7 @@
     <form class=" form dogProfileForm">
         <div class="form-group">
             <label>Name:</label>
-            <input class="form-input" type="text" id="dogName" />
+            <input class="form-control" type="text" id="dogName" />
         </div>
         <div class="form-group">
             <label>Gender:</label>
@@ -14,15 +14,15 @@
         </div>
         <div class="form-group">
             <label>Breed:</label>
-            <input class="form-input" type="text" id="breed" />
+            <input class="form-control" type="text" id="breed" />
         </div>
         <div class="form-group">
             <label>Age:</label>
-            <input class="form-input" type="number" id="age" placeholder="yrs" />
+            <input class="form-control" type="number" id="age" placeholder="yrs" />
         </div>
         <div class="form-group">
             <label>Weight:</label>
-            <input class="form-input" type="number" id="weight" placeholder=" lbs" />
+            <input class="form-control" type="number" id="weight" placeholder=" lbs" />
         </div>
         <div class="form-group">
             <label>Spayed/Neutered:</label>
@@ -68,7 +68,7 @@
             <label for="walk">Child friendly</label>
                
         </div>
-<button class="btn btn-warning" id = "dogSubmit">Create Dog Profile! </button>
+<button class="btn btn-action" id = "dogSubmit">Create Dog Profile! </button>
         </div>
 
 
