--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,17 @@
 {{!-- login view --}}
-<h2>Login!</h2>
+
 <form class="form login-form">
+    <h2>Login!</h2>
     <div class="mb-3 form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="email-login" class="form-label">Email</label>
+        <input class="form-control" type="text" id="email-login">
     </div>
     <div class="mb-3 form-group">
         <label for="InputPassword" class="form-label">Password</label>
         <input type="password" class="form-control" id="password-login">
     </div>
-    <div class="d-grid gap-2 mb-2 form-group">
-        <button type="submit" class="btn btn-secondary">Login!</button>
+    <div class="form-group">
+        <button type="submit" class="btn btn-action">Login!</button>
     </div>
     <a id="sign-up-link" href="/Userprofile" onclick="changeView()">Sign up instead</a>
 </form>
