--- a/views/dogProfile.handlebars
+++ b/views/dogProfile.handlebars
@@ -38,21 +38,9 @@
             <input class="form-control" type="number" id="weight" placeholder=" lbs" />
         </div>
         </div>
-          
-        
-        {{!-- <div class="form-group">
-            <label for="exampleFormControlSelect1">Energy Level</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-            </select>
-        </div> --}}
         <!-- Slider resource https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
         <div class="slidecontainer form-group">
-            <label>Energy Level</label>
+            <label>Energy Level: <span id= "energy"></span></label>
             <input type="range" min="1" max="5" value="3" class="slider" id="energyLevel">
             {{!-- <small id="energyRange" class="form-text text-muted">1 2 3 4 5</small> --}}
         </div>
@@ -83,13 +71,13 @@
         </br>
         <div class = "row">
             <div class = "form-group col-sm" style = "text-align: center">
-<button class="btn btn-action" id = "dogSubmit">Submit   <i class="fas fa-paw"></i></button>
+<button class="btn btn-action btn-large" id = "dogSubmit">Submit   <i class="fas fa-paw"></i></button>
         </div>
         </div>
         </div>
 </form>
 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="./js/dogSignup.js"></script>
 
