updated dashboard and profilecard views

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<h1>hello world</h1>
-{{!-- {{#each }}
+<h2 class="mb-4"><i class="fas fa-dog"></i> Doggy Dashboard</h2>
+{{#each dogs}}
 {{>profilecard}}
-{{/each}} --}}
+{{/each}}
