--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,24 +15,30 @@
                     <img src="./images/camilo-fierro-z7rcwqCi77s-unsplash (1).jpg" class="d-block w-100"
                         alt="Two dogs with looking up at the sky">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <h5></h5>
+                        <a href ="/userprofile">
+                        <button class = "btn-action btn-lg sign-up"><b>Join the pack! </b> <i class="fas fa-paw"></i></button>
+                </a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./images/james-barker-v3-zcCWMjgM-unsplash.jpg" class="d-block w-100"
                         alt="Brown dog smiling at camera with tongue hanging out">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5>Raise the Woof</h5>
+                        <a href ="/userprofile">
+                        <button class = "btn-action btn-lg sign-up"><b>Sign Up Now! </b> <i class="fas fa-paw"></i></button>
+                </a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./images/alvan-nee-T-0EW-SEbsE-unsplash.jpg" class="d-block w-100"
                         alt="Two dogs running together">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>Life is better with friends!</h5>
+                        <a href ="/userprofile">
+                        <button class = "btn-action btn-lg sign-up"><b>Join the Pawty! </b> <i class="fas fa-paw"></i></button>
+                </a>
                     </div>
                 </div>
             </div>
