styling the chat page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
             {{#if logged_in}}
             <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-heart fa-2x mx-3"></i>My Pack</a></li>
             <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-dog fa-2x mx-3"></i>Profile</a></li>
+            <li class="nav-item"><a href="/chat" class="nav-link"><i class="fas fa-comments fa-2x mx-3"></i>Chat</a></li>
             <li class="nav-item" id="logout"><a href="#" class="nav-link"><i class="fas fa-sign-out-alt fa-2x mx-3"></i>Logout</a></li>
             {{/if}}
           </ul>
