--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,12 +28,19 @@
         <div class="offcanvas-header">
           <ul class="navbar-nav">
             <li class="nav-item"><a href="/" class="nav-link"><i class="fas fa-home fa-2x mx-3"></i>Home</a></li>
-            <li class="nav-item"><a href="/login" class="nav-link"><i class="fas fa-paw fa-2x mx-3"></i>Login/Sign-up</a></li>
+            {{#unless logged_in}}
+            <li class="nav-item"><a href="/login" class="nav-link"><i
+                  class="fas fa-paw fa-2x mx-3"></i>Login/Sign-up</a></li>
+            {{/unless}}
             {{#if logged_in}}
+            <li class="nav-item"><a href="/dashboard" class="nav-link"><i class="fas fa-paw fa-2x mx-3"></i>Doggy
+                Dashboard</a></li>
             <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-heart fa-2x mx-3"></i>My Pack</a></li>
             <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-dog fa-2x mx-3"></i>Profile</a></li>
-            <li class="nav-item"><a href="/chat" class="nav-link"><i class="fas fa-comments fa-2x mx-3"></i>Chat</a></li>
-            <li class="nav-item" id="logout"><a href="#" class="nav-link"><i class="fas fa-sign-out-alt fa-2x mx-3"></i>Logout</a></li>
+            <li class="nav-item"><a href="/chat" class="nav-link"><i class="fas fa-comments fa-2x mx-3"></i>Chat</a>
+            </li>
+            <li class="nav-item" id="logout"><a href="#" class="nav-link"><i
+                  class="fas fa-sign-out-alt fa-2x mx-3"></i>Logout</a></li>
             {{/if}}
           </ul>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -62,10 +69,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-  
+
   <script src="../../public/js/homepage.js"></script>
 
-   
+
 </body>
 
 
