added img-fluid class to profile card img tags

--- a/views/partials/profilecard.handlebars
+++ b/views/partials/profilecard.handlebars
@@ -2,7 +2,7 @@
     <div class="row g-0">
         <div class="col-md-4">
             {{#if pic}}
-            <img src="{{pic}}" alt="Puppy Profile Pic">
+            <img src="{{pic}}" class="img-fluid" alt="Puppy Profile Pic">
             {{else}}
             <img src="./images/icons/noun_Dog_1539664_sm.png" alt="Park Pack icon">
             {{/if}}
