added pic upload to dog profile

--- a/views/dogProfile.handlebars
+++ b/views/dogProfile.handlebars
@@ -45,6 +45,12 @@
             {{!-- <small id="energyRange" class="form-text text-muted">1 2 3 4 5</small> --}}
         </div>
         </div>
+         <div class="form-group">
+             <label>Profile Picture: </label>
+             </br>
+             </br>
+      <input type="file" class="form-control-file border" name="file">
+    </div>
         </br>
         <p id = 'mainAct'>Activities:</p>
        <div class="activities form-group">
