user id captured on button

--- a/views/partials/profilecard.handlebars
+++ b/views/partials/profilecard.handlebars
@@ -22,7 +22,7 @@
                     </ul>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-action" id="addpack">Add to My Pack</button>
+                    <button type="submit" class="btn btn-action" id="addpack" data-user={{user_id}}>Add to My Pack</button>
                      {{!-- <button type="submit" class="btn btn-action">Login!</button> --}}
                 </div>
                 <div class="form-group">
