changed the image link so the icon works on all pages

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,7 +49,7 @@
       {{!-- end of offcanvas navbar --}}
       <div class="position-relative">
         <h1 class="logo position-absolute top-50 start-50 translate-middle">Park Pack<span><img
-              src="./images/icons/noun_Dog_1539664_sm.png" alt="Welcome to the Bark Side" class="ms-3"></span></h1>
+              src="/images/icons/noun_Dog_1539664_sm.png" alt="Welcome to the Bark Side" class="ms-3"></span></h1>
 
       </div>
     </div>
