adding sweetalert to all alerts for a polished look

--- a/views/Userprofile.handlebars
+++ b/views/Userprofile.handlebars
@@ -100,3 +100,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 {{!-- JS --}}
 <script src="./js/userSignup.js"></script>
+ <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
