--- a/views/chatroom.handlebars
+++ b/views/chatroom.handlebars
@@ -1,7 +1,9 @@
     <div class="chat-container">
       <header class="chat-header">
         <h1><i class="fas fa-dog"></i> Woof's Happening</h1>
-        <a id="leave-btn" class="btn">Leave Room</a>
+        {{!-- <a id="leave-btn" class="btn">Leave Room</a> --}}
+
+        <input type="button" name="swal" value="Leave Room" id="leave-btn" onclick="clickedMe()">
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
@@ -29,3 +31,4 @@
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script src="/js/chatroom.js"></script>
      {{!-- <script type="text/javascript" src="http://localhost:3001/socket.io/socket.io.js"></script> --}}
+     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
