--- a/views/dogProfile.handlebars
+++ b/views/dogProfile.handlebars
@@ -86,4 +86,5 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="./js/dogSignup.js"></script>
+ <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
