--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,8 @@
             <li class="nav-item"><a href="/dashboard" class="nav-link"><i class="fas fa-paw fa-2x mx-3"></i>Doggy
                 Dashboard</a></li>
             <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-heart fa-2x mx-3"></i>My Pack</a></li>
-            <li class="nav-item"><a href="#" class="nav-link"><i class="fas fa-dog fa-2x mx-3"></i>Profile</a></li>
+            <li class="nav-item"><a href="/myprofile" class="nav-link"><i class="fas fa-dog fa-2x mx-3"></i>Profile</a>
+            </li>
             <li class="nav-item"><a href="/chat" class="nav-link"><i class="fas fa-comments fa-2x mx-3"></i>Chat</a>
             </li>
             <li class="nav-item" id="logout"><a href="#" class="nav-link"><i
