changed links to owner not user

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -16,7 +16,7 @@
                         alt="Two dogs with looking up at the sky">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
-                        <a href ="/userprofile">
+                        <a href ="/ownerprofile">
                         <button class = "btn-action btn-lg sign-up"><b>Join the pack! </b> <i class="fas fa-paw"></i></button>
                 </a>
                     </div>
@@ -26,7 +26,7 @@
                         alt="Brown dog smiling at camera with tongue hanging out">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Raise the Woof</h5>
-                        <a href ="/userprofile">
+                        <a href ="/ownerprofile">
                         <button class = "btn-action btn-lg sign-up"><b>Sign Up Now! </b> <i class="fas fa-paw"></i></button>
                 </a>
                     </div>
@@ -36,7 +36,7 @@
                         alt="Two dogs running together">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Life is better with friends!</h5>
-                        <a href ="/userprofile">
+                        <a href ="/ownerprofile">
                         <button class = "btn-action btn-lg sign-up"><b>Join the Pawty! </b> <i class="fas fa-paw"></i></button>
                 </a>
                     </div>
