--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
     <div class="form-group">
         <button type="submit" class="btn btn-action">Login!</button>
     </div>
-    <a id="sign-up-link" href="/Userprofile" onclick="changeView()">Sign up instead</a>
+    <a id="sign-up-link" href="/ownerprofile" onclick="changeView()">Sign up instead</a>
 </form>
 
 
