jumbotron now mobile responsive, does not interfere with bone button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
   <header>
     <!-- start offcanvas navbar-->
     <div class="jumbotron">
-      <button class="btn btn-action" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
+      <button class="btn btn-action btn-bone" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
         aria-controls="offcanvasScrolling"><i class="fas fa-bone"></i> </button>
       <div class="offcanvas offcanvas-start offcanvas-style" data-bs-scroll="true" data-bs-backdrop="false"
         tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
@@ -48,13 +48,10 @@
         </div>
       </div>
       {{!-- end of offcanvas navbar --}}
-      <div class="position-relative">
-        <h1 class="logo position-absolute top-50 start-50 translate-middle">Park Pack<span><img
-              src="/images/icons/parkpackicon.png" alt="Welcome to the Bark Side" class="ms-3"></span></h1>
-
-
-
-      </div>
+       <h1 class="logo">Park Pack<span><img
+              src="/images/icons/parkpackicon.png" alt="Welcome to the Bark Side" class="img-fluid ms-3"></span></h1>
+       
+      
     </div>
   </header>
 
