chats are saving and printing, my pack is functional

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -71,7 +71,7 @@
     crossorigin="anonymous"></script>
 
   <script src="../../public/js/homepage.js"></script>
-
+  <script src="/js/profilecard.js"></script>
 
 </body>
 
