--- a/views/partials/profilecard.handlebars
+++ b/views/partials/profilecard.handlebars
@@ -22,7 +22,7 @@
                     </ul>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-action addpack" id="addpack" data-user={{user_id}}>Add to My Pack</button>
+                    <button type="submit" class="btn btn-action addpack"  data-user={{user_id}}>Add to My Pack</button>
                      {{!-- <button type="submit" class="btn btn-action">Login!</button> --}}
                 </div>
                 <div class="form-group">
@@ -32,4 +32,3 @@
         </div>
     </div>
 </div>
-<script src="/js/profilecard.js"></script>
