updated styles across views

--- a/views/Userprofile.handlebars
+++ b/views/Userprofile.handlebars
@@ -1,4 +1,4 @@
-<h2 style="text-align: center">Create Your Parent Profile</h2>
+<h2 class="formh2" style="text-align: center"><i class="fas fa-paw mx-3"></i>Create Your Parent Profile</h2>
 </br>
 <main>
     <form class="form userProfileForm">
@@ -76,7 +76,7 @@
         </br>   
         <div class = "row">
         <div class="form-group col-sm" style = "text-align: center">
-            <button class= "btn btn-action btn-lg" id= "userSubmit">Submit   <i class="fas fa-paw"></i></button>
+            <button class= "btn btn-action btn-lg" id= "userSubmit">Submit   <i class="fas fa-paw ms-3"></i></button>
         </div>
         </div>
     </form>
