--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -1,6 +1,6 @@
 <div class="join-container">
     <header class="join-header">
-        <h1><i class="fas fa-dog"></i> ParkPack Chat</h1>
+        <h2 id="chath2"><i id="chat-icon"class="fas fa-comments me-3"></i>ParkPack Chat</h2>
     </header>
     <main class="join-main">
         <form id="choose-chat">
@@ -19,7 +19,7 @@
 							<option value="hikingTrails">Hiking, yo!</option> -->
                 </select>
             </div>
-            <button type="submit" class="btn">Join Chat</button>
+            <button type="submit" class="btn">Join Chat<i class="fas fa-dog ms-3"></i></button>
         </form>
     </main>
 </div>
