--- a/views/chatroom.handlebars
+++ b/views/chatroom.handlebars
@@ -1,15 +1,15 @@
     <div class="chat-container">
       <header class="chat-header">
-        <h1><i class="fas fa-dog"></i> Woof's Happening</h1>
+        <h2 class="chath2"><i class="fas fa-dog fa-2x mx-4"></i>Woof's Happening</h2>
         {{!-- <a id="leave-btn" class="btn">Leave Room</a> --}}
 
         <input type="button" name="swal" value="Leave Room" id="leave-btn" onclick="clickedMe()">
       </header>
       <main class="chat-main">
         <div class="chat-sidebar">
-          <h3><i class="fas fa-comments"></i> Room Name: </h3>
-          <h2 id="room-name">{{ name }}</h2>
-          <h3><i class="fas fa-paw"></i> Users</h3>
+          <h3 class="chatroomh3"><i class="fas fa-comments chatroomicon me-2"></i> Room Name: </h3>
+          <h2 class="chatroomh2" id="room-name">{{ name }}</h2>
+          <h3 class="chatroomh3"><i class="fas fa-paw chatroomicon me-2"></i> Users</h3>
           <ul id="users"></ul>
         </div>
         <div class="chat-messages"></div>
