--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,5 @@
-<h2 class="mb-4"><i class="fas fa-dog"></i> Doggy Dashboard</h2>
+<h2 class="formh2 mb-4"><i class="fas fa-dog me-3"></i>Doggy Dashboard</h2>
+
 {{#each dogs}}
 {{>profilecard}}
 {{/each}}
