--- a/views/partials/profilecard.handlebars
+++ b/views/partials/profilecard.handlebars
@@ -10,7 +10,7 @@
 
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">{{name}}</h5>
+                <h5 class="card-title cardh5">{{name}}</h5>
                 <div class="mb-3 form-group">
                     <ul class="card-text list-unstyled">
                         <li>Gender: {{gender}}</li>
@@ -22,7 +22,7 @@
                     </ul>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-action" id="addpack" data-user={{user_id}}>Add to My Pack</button>
+                    <button type="submit" class="btn btn-action" id="addpack" data-user={{user_id}}>Add to My Pack<i class="fas fa-heart ms-3"></i></button>
                      {{!-- <button type="submit" class="btn btn-action">Login!</button> --}}
                 </div>
                 <div class="form-group">
