adding routes in homeroutes and dogroutes to view an individual profile.   Adding js to profilecard to view individual dog

--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -1,13 +1,10 @@
+{{!-- chat main page --}}
 <div class="join-container">
     <header class="join-header">
-        <h2 id="chath2"><i id="chat-icon"class="fas fa-comments me-3"></i>ParkPack Chat</h2>
+        <h2 id="chath2"><i id="chat-icon" class="fas fa-comments me-3"></i>ParkPack Chat</h2>
     </header>
     <main class="join-main">
         <form id="choose-chat">
-            {{!-- <div class="form-control">
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username" placeholder="Enter username..." required />
-            </div> --}}
             <div class="form-control">
                 <label for="room">Room</label>
                 <select name="room" id="room">
