--- a/views/doggyprofile.handlebars
+++ b/views/doggyprofile.handlebars
@@ -1,3 +1,4 @@
+{{!-- form for dog signup --}}
 <h2 class="formh2" style = "text-align: center"><i class="fas fa-dog ms-3 me-2"></i>Create Doggy Profile</h2>
  
     <form class=" form dogProfileForm">
