--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-
+{{!-- homepage --}}
 <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12">
         <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
