--- a/views/myprofile.handlebars
+++ b/views/myprofile.handlebars
@@ -1,3 +1,4 @@
+{{!-- user's dog's profile information --}}
 {{#each dogs}}
 <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-8 window">
@@ -21,9 +22,6 @@
                             class="fas fa-comments ms-3"></i></button></a>
                 <a href="/dashboard"><button type="submit" class="btn btn-action" id="addpack">Dashboard<i
                             class="fas fa-paw ms-3"></i></button></a>
-
-
-
             </div>
     </div>
     {{/each}}
