--- a/views/ownerprofile.handlebars
+++ b/views/ownerprofile.handlebars
@@ -1,3 +1,4 @@
+{{!-- owner's signup information --}}
 <h2 class="formh2" style="text-align: center"><i class="fas fa-paw mx-3"></i>Create Your Parent Profile</h2>
 </br>
 <main>
@@ -47,7 +48,7 @@
         </div>
 
 
-        
+
 
         <!-- Slider resource https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
         {{!-- <div class="slidecontainer form-group">
@@ -61,23 +62,23 @@
                 <label>User Name:</label>
                 <input class="form-control" type="text" id="userName" />
             </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-sm">
+                <label>Password:</label>
+                <input class="form-control" type="password" id="password" />
             </div>
-            <div class="row">
-                <div class="form-group col-sm">
-                    <label>Password:</label>
-                    <input class="form-control" type="password" id="password" />
-                </div>
-            </div>
-            <!-- <div class="form-group">
+        </div>
+        <!-- <div class="form-group">
             <label>Confirm Password:</label>
             <input class="form-control" type="password" id="confirmpassword" />
         </div> -->
         </div>
-        </br>   
-        <div class = "row">
-        <div class="form-group col-sm" style = "text-align: center">
-            <button class= "btn btn-action btn-lg" id= "userSubmit">Submit   <i class="fas fa-paw ms-3"></i></button>
-        </div>
+        </br>
+        <div class="row">
+            <div class="form-group col-sm" style="text-align: center">
+                <button class="btn btn-action btn-lg" id="userSubmit">Submit <i class="fas fa-paw ms-3"></i></button>
+            </div>
         </div>
     </form>
 </main>
@@ -103,4 +104,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 {{!-- JS --}}
 <script src="./js/userSignup.js"></script>
- <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
