--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,4 @@
+{{!-- displays all information about all dogs --}}
 <h2 class="formh2 mb-4"><i class="fas fa-dog me-3"></i>Doggy Dashboard</h2>
 
 {{#each dogs}}
