--- a/views/partials/profilecard.handlebars
+++ b/views/partials/profilecard.handlebars
@@ -22,12 +22,16 @@
                     </ul>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-action addpack" id="addpack" data-user={{user_id}}>Add to My Pack<i class="fas fa-heart ms-3"></i></button>
+                    <button type="submit" class="btn btn-action addpack" id="addpack" data-user={{user_id}}>Add to My
+                        Pack<i class="fas fa-heart ms-3"></i></button>
                 </div>
                 <div class="form-group">
-                   
+                    <button type="submit" class="btn btn-action viewprofile" id="viewdog" data-user={{user_id}}>View
+                        Profile<i class="fas fa-paw ms-3"></i></button>
                 </div>
+
             </div>
         </div>
     </div>
+</div>
 </div>
