updated buttonstyles and text on homepage

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,15 @@ label{
 	color:#ffa62b;
 }
 
+.homeh5{
+  font-family: 'Lexend';
+}
+
+.btn-signup {
+  font-family: 'Lexend';
+  color:  #16697a;
+}
+
 /* offcanvas stylings */
 .fa-bone{
   color:#16697a
